[package]
name = "walk"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"

[dependencies]
veneer = {git = "https://github.com/saethlin/veneer"}
libc = "0.2"
crossbeam-channel = "0.3"
num_cpus = "1.0"
lazy_static = "1.0"

[profile.release]
debug = 1
panic = 'abort'
lto = true
